# versatile-mcmc

./: .gitignore  .travis.yml  README.md  algorithm_8cpp.html  algorithm_8cpp__incl.map  algorithm_8cpp__incl.md5  algorithm_8h.html  algorithm_8h__dep__incl.map  algorithm_8h__dep__incl.md5  algorithm_8h__incl.map  algorithm_8h__incl.md5  algorithm_8h_source.html  algorithm_8hpp.html  algorithm_8hpp__dep__incl.map  algorithm_8hpp__dep__incl.md5  algorithm_8hpp__incl.map  algorithm_8hpp__incl.md5  algorithm_8hpp_source.html  annotated.html  blas_8h.html  blas_8h__dep__incl.map  blas_8h__dep__incl.md5  blas_8h__incl.map  blas_8h__incl.md5  blas_8h_source.html  blas_8hpp.html  blas_8hpp__dep__incl.map  blas_8hpp__dep__incl.md5  blas_8hpp__incl.map  blas_8hpp__incl.md5  blas_8hpp_source.html  chain_8cpp.html  chain_8cpp__incl.map  chain_8cpp__incl.md5  chain_8hpp.html  chain_8hpp__dep__incl.map  chain_8hpp__dep__incl.md5  chain_8hpp__incl.map  chain_8hpp__incl.md5  chain_8hpp_source.html  (+333 more)
doc/: Doxyfile  Doxyfile.in  Mainpage.dox  meson.build
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  files_0.js  files_1.js  files_2.js  files_4.js  files_6.js  files_7.js  files_8.js  files_a.js  files_b.js  functions_0.js  functions_1.js  (+17 more)
src/: fmcmc-example.cpp  fmcmc.cpp  fmcmc_example.cpp  meson.build  vmcmc-example.cpp
src/fmcmc/: algorithm.cpp  algorithm.h  controller.cpp  controller.h  exception.h  exceptions.h  logger.cpp  logger.h  logging.cpp  logging.h  meson.build  metropolis.cpp  metropolis.h  numeric.h  parameter.cpp  parameter.h  prior.cpp  prior.h  proposal.cpp  proposal.h  random.h  sample.h  stats.h  stringutils.h  typetraits.h  ublas.h
src/vmcmc/: algorithm.cpp  algorithm.h  algorithm.hpp  blas.h  blas.hpp  chain.cpp  chain.hpp  exception.h  exception.hpp  io.cpp  io.h  io.hpp  logger.cpp  logger.h  logger.hpp  math.cpp  math.hpp  meson.build  metropolis.cpp  metropolis.h  metropolis.hpp  numeric.h  numeric.hpp  parameter.cpp  parameter.h  parameter.hpp  prior.cpp  prior.h  proposal.cpp  proposal.h  proposal.hpp  random.h  random.hpp  sample.h  sample.hpp  stats.cpp  stats.h  stringutils.cpp  stringutils.h  stringutils.hpp  (+2 more)
subprojects/gnuplot-cpp/: gnuplot_i.hpp
subprojects/imgui/: meson.build
test/: blas-test.cpp  chain-test.cpp  controller_test.cpp  exception-test.cpp  io-test.cpp  logger-test.cpp  logger_test.cpp  logging_test.cpp  math-test.cpp  meson.build  metropolis-test.cpp  numeric-test.cpp  numeric_test.cpp  parameter-test.cpp  parameter_test.cpp  prior-test.cpp  proposal-test.cpp  random-test.cpp  random_test.cpp  sample-test.cpp  stats-test.cpp  stringutils-test.cpp  typetraits-test.cpp  ublas-test.cpp
