option('use_tbb', type : 'boolean', value : true, description : 'Use multi-core parallelization (requries libtbb-dev).')
option('use_plot', type : 'boolean', value : false, description : 'Use QCustomPlot for real time plotting (requries libqcustomplot-dev).')
option('build_tests', type : 'boolean', value : true, description : 'Build unit tests (requries libgtest-dev).')
